--- a/index.html
+++ b/index.html
@@ -54,10 +54,20 @@
     </div>
     <div>
         <h2>Наша команда</h2>
-        <figure>
-            <img src="" alt="">
-            <figcaption></figcaption>
-        </figure>
+      <img src="./img/our-team/team card 1.jpg" alt="Игорь Демьяненко">
+      <img src="./img/our-team/team card 2.jpg" alt="Ольга Репина">
+      <img src="./img/our-team/team card 3.jpg" alt="Николай Тарасов">
+      <img src="./img/our-team/team card 4.jpg" alt="Михаил Ермаков">
     </div>
+    <footer>
+      <a href="/">
+        Webstudio
+      </a>
+     <ul>
+       <li>г. Киев, пр-т Леси Украинки, 26</li> 
+       <li>info@example.com</li>
+       <li>+38 099 111 11 11</li>
+    </ul>
+    </footer>  
 </body>
 </html>
