--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="">Заказать услугу</a>
         </section>
     </div>
-    <seciotn>
+    <div>
         <ul>
             <li><h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -45,7 +45,7 @@
                 <p> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
-    </seciotn>
+    </div>
     <div>
         <h2>Чем мы занимаемся</h2>
         <img src="./img/our-team/img.jpg" alt="Работа с кодом">
@@ -54,10 +54,10 @@
     </div>
     <div>
         <h2>Наша команда</h2>
-      <img src="./img/our-team/team card 1.jpg" alt="Игорь Демьяненко">
-      <img src="./img/our-team/team card 2.jpg" alt="Ольга Репина">
-      <img src="./img/our-team/team card 3.jpg" alt="Николай Тарасов">
-      <img src="./img/our-team/team card 4.jpg" alt="Михаил Ермаков">
+      <img src="./img/our-team/team_card_1.jpg" alt="Игорь Демьяненко">
+      <img src="./img/our-team/team_card_2.jpg" alt="Ольга Репина">
+      <img src="./img/our-team/team_card_3.jpg" alt="Николай Тарасов">
+      <img src="./img/our-team/team_card_4.jpg" alt="Михаил Ермаков">
     </div>
     <footer>
       <a href="/">
