finished and added main
added main

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
         </ul>
     </header>
+    <main>
     <div>
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
@@ -59,6 +60,7 @@
       <img src="./img/our-team/team_card_3.jpg" alt="Николай Тарасов">
       <img src="./img/our-team/team_card_4.jpg" alt="Михаил Ермаков">
     </div>
+    </main>
     <footer>
       <a href="/">
         Webstudio
