--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Студия</title>
 </head>
 <body>
     <header>
         <nav>
         <a href="/">
-        Webstudio
+        WebStudio
         </a>
         <ul>
-            <li>Студия</li>
-            <li>Портфолио</li>
-            <li>Контакты</li>
+            <li><a>Студия</a></li>
+            <li><a>Портфолио</a></li>
+            <li><a>Контакты</a></li>
         </ul>
         </nav>
         <ul>
@@ -28,7 +28,7 @@
     <div>
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <a href="">Заказать услугу</a>
+            <button type="button">Заказать услугу</button>
         </section>
     </div>
     <div>
@@ -49,27 +49,56 @@
     </div>
     <div>
         <h2>Чем мы занимаемся</h2>
-        <img src="./img/our-team/img.jpg" alt="Работа с кодом">
-        <img src="./img/our-team/box2.jpg" alt="Синхронизация смартфона с ПК">
-        <img src="./img/our-team/box3.jpg" alt="Цветовая гамма">
+        <ul>
+        <li>
+        <img src="./img/what_we_do/box1_min.jpg" alt="Работа с кодом" width="370" height="294">
+        </li>
+        <li>
+        <img src="./img/what_we_do/box2_min.jpg" alt="Синхронизация смартфона с ПК"  width="370" height="294">
+        </li>
+        <li>
+        <img src="./img/what_we_do/box3_min.jpg" alt="Цветовая гамма"  width="370" height="294">
+        </li>
+        </ul>
     </div>
     <div>
         <h2>Наша команда</h2>
-      <img src="./img/our-team/team_card_1.jpg" alt="Игорь Демьяненко">
-      <img src="./img/our-team/team_card_2.jpg" alt="Ольга Репина">
-      <img src="./img/our-team/team_card_3.jpg" alt="Николай Тарасов">
-      <img src="./img/our-team/team_card_4.jpg" alt="Михаил Ермаков">
+        <ul>
+            <li>
+      <img src="./img/our-team/img_1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+        <h4>Игорь Демьяненко</h4>
+        <p>Product Designer</p>
+    </li>
+      <li>
+      <img src="./img/our-team/img_2.jpg" alt="Ольга Репина" width="270" height="260">
+        <h4>Ольга Репина</h4>
+        <p>Frontend Developer</p>
+    </li>
+      <li>
+      <img src="./img/our-team/img_3.jpg" alt="Николай Тарасов" width="270" height="260">
+        <h4>Николай Тарасов</h4>
+        <p>Marketing</p>
+    </li>
+      <li>
+      <img src="./img/our-team/img_4.jpg" alt="Михаил Ермаков" width="270" height="260">
+        <h4>Михаил Ермаков</h4>
+        <p>UI Designer</p>
+    </li>
+      </ul>
     </div>
     </main>
     <footer>
       <a href="/">
-        Webstudio
+        WebStudio
       </a>
-     <ul>
-       <li>г. Киев, пр-т Леси Украинки, 26</li> 
-       <li>info@example.com</li>
-       <li>+38 099 111 11 11</li>
+    
+         <address>
+            <ul>
+       <li><a>г. Киев, пр-т Леси Украинки, 26</a></li> 
+       <li><a>info@example.com</a></li>
+       <li><a>+38 099 111 11 11</a></li>
     </ul>
-    </footer>  
+    </address>
+  </footer>  
 </body>
 </html>
